[tool.poetry]
name = "backup"
version = "1.2.0"
description = "PaddeCraft's backup tool"
authors = ["PaddeCraft <70023807+PaddeCraft@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.scripts]
backup = "backup.__main__:app"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.5.2"
toml = "^0.10.2"
typer = "^0.9.0"
humanize = "^4.8.0"
requests = "^2.31.0"
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
